apps/headlamp/requirements.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${HEADLAMP_NAMESPACE:-headlamp}
  labels:
    toolkit.fluxcd.io/tenant: sthings-team
